# fastapi-board

./: .gitignore  .prettierrc  README.md  biome.json  package.json  turbo.json
apps/backend/: .gitignore  database.db  drizzle.config.ts  package.json  pyproject.toml
apps/backend/src/: env.py  main.py  session.py  utils.py
apps/backend/src/db/: __init__.py  schema.py
apps/backend/src/routes/: boards.py  posts.py  users.py
apps/frontend/: astro.config.mjs  package.json  tsconfig.json
apps/frontend/src/components/editor/: context.tsx  editor-component.tsx  editor.tsx  index.tsx  types.ts  utils.ts
apps/frontend/src/components/navbar/: navbar.astro  theme-toggle.tsx
apps/frontend/src/components/ui/: avatar.tsx  button.tsx  card.tsx  checkbox.tsx  command.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  label.tsx  number-field.tsx  pagination.tsx  radio-group.tsx  select.tsx  separator.tsx  skeleton.tsx  switch.tsx  tags.tsx  text-field.tsx
apps/frontend/src/icons/fa6-brands/: github.tsx
apps/frontend/src/icons/fluent/: maximize-24-filled.tsx  minimize-24-regular.tsx
apps/frontend/src/icons/ic/: round-pause-circle.tsx  round-pause.tsx  round-play-arrow.tsx  round-play-circle.tsx
apps/frontend/src/icons/logos/: github-icon.tsx
apps/frontend/src/icons/lucide/: chevrons-up-down.tsx  panel-left.tsx
apps/frontend/src/icons/material-symbols/: open-in-new.tsx  youtube-tv-outline.tsx
apps/frontend/src/layouts/: base-layout.astro
apps/frontend/src/pages/: index.astro
apps/frontend/src/styles/: global.css
docs/: erd.md
(+69 files in other folders)
